# 7407-DriveCode-RapidReact

./: .gitignore  CONFIG.py  README  README.md  config.py  configuration.py  constants.py  ds_backend.py  global_config.py  physics.py  pyproject.toml  robot.py  robot_systems.py  simgui-window.json  simgui.json
autonomous/: auto_routine.py  five_ball_auto.py  five_ball_auto_blue.py  five_ball_auto_red.py  follow_path.py  new_five_ball_auto.py  rude_two_ball_auto.py  three_ball_auto.py  trajectory.py  two_ball_auto.py
command/: __init__.py  ball_path.py  ballpath.py  drivetrain.py  elevator.py  grabber.py  index.py  intake.py  shoot_while_moving.py  shooter.py  shooter_control.py
commands/: __init__.py  ballpath.py  elevator.py  intake.py  shooter.py
extra/: dashclient.py
lib/: base_command.py  base_subsystem.py  command.py  motor.py  subsystem.py
oi/: OI.py  __init__.py  buttons.py  controllermap.py  joysticks.py  keymap.py  oi.py
robot_lib/: command.py  i_init.py  motor.py  robot_2.py  subsystem.py
sensors/: __init__.py  analog_pressure_sensor.py  color_sensor.py  color_sensors.py  detect_balls.py  field_odometry.py  gyro.py  intake_camera_client_test.py  intake_camera_network.py  intake_camera_server.py  intake_camera_server_test.py  intake_cameras.py  limelight.py  limit_switch.py  magnetic_limit_switch.py  photoelectric_switch.py  rev_digit.py
subsystem/: __init__.py  drivetrain.py  elevator.py  grabber.py  hanger.py  hopper.py  index.py  intake.py  pneumatics.py  shifter.py  shooter.py  shooter_targeting.py  sim_drivetrain.py  turret.py
(+62 files in other folders)
